# wifi-channel-optimizer

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  aliases.py  config_paths.py  dashboard.py  get_password.py  logging_config.py  main.py  pyproject.toml  router_client.py  wifi_scanner.py
.github/workflows/: ci.yml
devices/: __init__.py  demo.yaml  tplink_archer_c20_v5.yaml
drivers/: base.py  demo.py  tplink_oid.py
tests/: conftest.py  test_aliases.py  test_base_driver.py  test_dashboard.py  test_demo.py  test_devices.py  test_logging_config.py  test_router_client.py  test_wifi_scanner.py
